<resources>
    <string name="app_name">Bid Sneakers</string>
    <string name="package_name">com.johnson.bid</string>

    <string name="bit_times">出價次數 :</string>
    <string name="product_title">商品名稱</string>
    <string name="product_intro">商品介紹</string>
    <string name="product_condition">商品狀況</string>
    <string name="product_condition_new">全新</string>
    <string name="product_condition_used">二手</string>
    <string name="auction_type">拍賣模式</string>
    <string name="auction_type_english">一般拍賣</string>
    <string name="auction_type_sealed">封閉拍賣</string>
    <string name="reserve_price">保留價 (非必填)</string>
    <string name="increase">出價增額</string>
    <string name="increase_one">NT$ 1</string>
    <string name="increase_ten">NT$ 10</string>
    <string name="increase_hundred">NT$ 100</string>
    <string name="increase_thousand">NT$ 1000</string>
    <string name="product_information">商品資訊</string>
    <string name="auction_settings">拍賣設定</string>
    <string name="starting_price">起標價格</string>
    <string name="finish_time">結標時間 : </string>
    <string name="post">提交</string>

    <string name="post_success">刊登成功</string>
    <string name="bid_success">出價成功</string>
    <string name="nobody">無</string>
    <string name="delete_success">刪除成功</string>

    <!--placeholder-->
    <string name="nike_air_mag">Nike Air Mag</string>
    <string name="placeholder_time">1 天 12 時 12 分 12 秒</string>

    <string name="placeholder_price">300000</string>
    <string name="slash">/</string>
    <string name="bit_times_on_brief">次出價</string>
    <string name="bought_time">得標時間 :</string>
    <string name="placeholder_date">02 月 29 日 18 時 30 分</string>
    <string name="sold_time">售出時間 :</string>
    <string name="add_pics">新增照片</string>
    <string name="finish_time_post">結標時間</string>
    <string name="add_pics_from">新增商品照片從</string>

    <string name="delete_product_or_not">確定要刪除此商品?</string>

    <string name="place_bid_title">標標標標起來</string>
    <string name="dialog_current_price">目前最高出價 :</string>
    <string name="dialog_increase_title">出價增額 :</string>
    <string name="dialog_increase">1000</string>
    <string name="please_place_bid">請輸入出價</string>

    <string name="product_introduction">商品介紹</string>
    <string name="product_intro_content">無鞋盒，無配件，鞋墊很臭</string>
    <string name="product_condition_title">商品狀況 :</string>
    <string name="brand_new">全新</string>
    <string name="remaining_time_title">倒數時間 :</string>
    <string name="current_price_title">目前出價 :</string>
    <string name="placeholder_bit_times">87</string>
    <string name="placeholder_increase">1000</string>
    <string name="increase_title">出價增額 :</string>
    <string name="buyer_title">最高出價人 :</string>
    <string name="placeholder_buyer">James</string>
    <string name="seller_title">賣家 :</string>
    <string name="placeholder_seller">McGee</string>
    <string name="im_gonna_bid">我要出價</string>
    <string name="auction_type_title">拍賣模式 :</string>
    <string name="placeholder_auction_type">一般拍賣</string>
    <string name="reserve_price_title">保留價 :</string>
    <string name="placeholder_reserve_price">8000</string>
    <string name="delete_product">刪除商品</string>
    <string name="bought_price">得標價錢 :</string>
    <string name="connect_seller">聯絡賣家</string>
    <string name="sold_price">售出價錢 :</string>
    <string name="buyer">買家 :</string>
    <string name="starting_price_title">起標價錢 :</string>
    <string name="repost">重新刊登</string>
    <string name="warning_msg_under_current_price">您的出價低於目前價格，請重新出價</string>
    <string name="warning_msg_under_increase">您的出價低於出價增額，請重新出價</string>
    <string name="warning_msg_under_reserve_price">您的出價仍低於保留價，建議再增高出價</string>
    <string name="auction_rule_english">英式拍賣是最普通的一種拍賣方式，其形式是：在拍賣過程中，拍賣標的物的競價按照競價階梯由低至高、依次遞增，當到達拍賣截止時間時，出價最高者成為競買的贏家（即由競買人變成買受人）。拍賣前，賣家可設定保留價，當最高競價低於保留價時，賣家有權不出售此拍賣品。當然，賣家亦可設定無保留價，此時，到達拍賣截止時間時，最高競價者成為買受人。</string>
    <string name="auction_rule_sealed">封閉式拍賣，俗稱“暗標”，是指拍賣之前起拍價和保留價嚴格保密。競買人不僅事先無法知道起拍價，也無法在拍賣之前計算出相應的利益。不光競買人，就連拍賣人對起拍價和保留價也完全不知情，因為很多封閉式競價拍賣的起拍價和保留價是裝在一個密封的信封內，由委托方當場送上去的。 之所以採用這種方式，完全是出於保護拍賣人、委托人和買家三方利益的目的。因為在一些小型的拍賣會上，極個別的競買客戶會私下與其他競買客戶串通，拍賣會上只由一人舉牌應價，並使之成為以低價甚至是起拍底價成交的人，其他競買人都不舉牌與之競爭，待拍賣會結束後再私下從此買受人身上取得一定的 “好處”。這種串通的方式比較多的存在於底價和起拍價相對市場價較低的公物拍賣中。 封閉式競價拍賣能有效地減少這種現象的產生。在採用“暗標”拍賣的情況下，競買人無法獲知起拍價，也就失去了串通的基礎。採用“暗標”的方式最大好處是可以起到一定的預防作用，但同時也對拍賣人提出了更高的保密要求，因為起拍價一旦過早泄密，這一預防措施也就全面瓦解。 但是採用這種拍賣方式又產生了一個新問題，那就是拍賣商與競價者之間相互勾結。因為在競價被封閉*他人無法獲知內情的情況下，拍賣商可以利用身份上的便利，暗通標底或另做手腳，這種欺詐行為比較隱蔽，不易察覺，但無疑損害了委托方和其他買家的利益。因此目前很多封閉式競價拍賣，不僅起拍價和保留價要密封，就連價格也是當場才送到拍賣師手中，這樣更為有效地杜絕了惡意串通勾結的可能性。</string>
    <string name="edit">編輯</string>
    <string name="edit_name">修改</string>
    <string name="user_name">使用者名稱</string>
    <string name="aka">沈玉琳 aka 水上彭于晏</string>
    <string name="edit_user_name_hint">請輸入使用者名稱</string>
    <string name="placeholder_text_content">到底甚麼時候要面交啦</string>


    <string name="bid_finish">競標結束</string>


    <string name="not_today">先不要</string>
    <string name="yes">確定</string>

    <string name="cancel">取消</string>
    <string name="place_the_bid">出價</string>

    <string name="album">相簿</string>
    <string name="camera">相機</string>


    <string name="nt_dollars">NT$</string>


    <!--Firebase-->
    <string name="firebase_products">products</string>
    <string name="firebase_chatrooms">chatrooms</string>
    <string name="firebase_users">users</string>

    <string name="firebase_field_auction_type">auctionType</string>
    <string name="firebase_auction_type_English">一般拍賣</string>
    <string name="firebase_auction_type_sealed">封閉拍賣</string>

    <string name="firebase_field_auction_condition">auctionCondition</string>
    <string name="firebase_auction_condition_bidding">bidding</string>
    <string name="firebase_auction_condition_finish">finish</string>

    <string name="firebase_field_start_time">startTime</string>
    <string name="firebase_field_owner_list">ownerList</string>
    <string name="firebase_field_chat_content_array_list">chatContentArrayList</string>
    <string name="firebase_filed_current_price">currentPrice</string>


    <!--timer-->
    <string name="timer_month">月</string>
    <string name="timer_date">日</string>
    <string name="timer_day">天</string>
    <string name="timer_hour">時</string>
    <string name="timer_minute">分</string>
    <string name="timer_second">秒</string>
    <string name="place_bid">我要出價</string>
    <string name="already_placed_bid">已經出過價嘍~~</string>
    <string name="firebase_field_seller_id">sellerId</string>
    <string name="firebase_field_buyer_id">buyerId</string>
    <string name="simple_date_format_MdHm">MM 月 dd 日 HH 時 mm 分</string>
    <string name="simple_date_format_EHm">E  HH : mm</string>

    <!--toolbar title-->
    <string name="toolbar_title_eyes_on">關注</string>
    <string name="toolbar_title_chat">聊聊</string>
    <string name="toolbar_title_auction">拍賣中心</string>
    <string name="toolbar_title_my_trade">我的交易</string>
    <string name="toolbar_title_settings">設定</string>
    <string name="toolbar_title_post">刊登</string>
    <string name="toolbar_title_search_result">搜尋結果</string>
    <string name="tablayout_title_English_auction">一般拍賣</string>
    <string name="tablayout_title_sealed_auction">封閉拍賣</string>

    <!--notification-->
    <string name="notification_title_eyes_on">快結標嘍 !!!</string>
    <string name="notification_text_eyes_on">即將在30分鐘後結標，千萬別錯過 !!!</string>
    <string name="notification_ticker">Ticker</string>

    <!--settings-->
    <string name="settings_btn_title_edit">修改</string>
    <string name="settings_btn_title_done">完成</string>

    <!--Facebook-->
    <string name="facebook_app_id">395083894645098</string>
    <string name="fb_login_protocol_scheme">fb395083894645098</string>
    <string name="fb_id">id</string>
    <string name="fb_name">name</string>
    <string name="fb_email">email</string>
    <string name="fb_profile_url_part1">https://graph.facebook.com/</string>
    <string name="fb_profile_url_part2">/picture?type=large</string>


    <string name="placeholder_start_chatting">開始聊天吧</string>
    <string name="warning_complete_post_info">請填完整資訊</string>


    <string name="badge_exclamation_mark">!</string>

    <string name="message_logout_success">登出成功</string>
    <string name="firebase_field_highest_user_id">highestUserId</string>
    <string name="firebase_field_buyer_name">buyerName</string>
    <string name="firebase_field_place_bid_times">placeBidTimes</string>


</resources>
